# imu-ros

./: CMakeLists.txt  README.md  package.xml
bags/: imu_rs.bag
launch/: imu.launch  imu_rs.launch
scripts/: imu.py
src/: imu.cpp
